SERVER-63169 Fix deadlock in balancer_defragmentation_merge_chunks